--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://https://mlab.com/databases/tweeter-clone-lj
+MONGODB_URI=mongodb://lovejuser:lovejpassword@ds237967.mlab.com:37967/tweeter-clone-lj
